<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flappy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_fragment_username">username</string>
    <string name="login_fragment_email">e-mail</string>
    <string name="login_fragment_Bulgaria">Bulgaria</string>
    <string name="login_fragment_Russia">Russia</string>
    <string name="login_fragment_China">China</string>
    <string name="login_fragment_play">Play!</string>
</resources>
