<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mavr0.flappy.Fragments.LoginFragment"
    android:background="@android:color/darker_gray" >

    <RelativeLayout
        android:id="@+id/login_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:cursorVisible="true"
                android:hint="@string/login_fragment_username" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:cursorVisible="true"
                android:hint="@string/login_fragment_email" />

            <RadioGroup
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_fragment_Bulgaria"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_fragment_Russia" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/login_fragment_China" />

            </RadioGroup>

            <Button
                android:id="@+id/play_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_fragment_play" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
